<resources>
    <string name="app_name">APRIL</string>
    <string name="button">Button</string>
    <string name="view_exercises">View Exercises</string>
    <string name="april">APRIL</string>
    <string name="view_nutrition">View Nutrition</string>
    <string name="april_logo_description">APRIL Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_exercises">Exercises</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_nutrition_main">activity_nutrition_main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nutrition">Nutrition</string>
    <string name="view_nutrition_info">Information</string>
    <string name="view_illness_info">Feeling Unwell?</string>
    <string name="view_meals">Meal Ideas</string>
    <string name="view_smoothies">Smoothie Recipes</string>
    <string name="title_activity_nutrition_information">NutritionInformation</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="title_activity_nutrition_meals">NutritionMeals</string>
    <string name="title_activity_nutrition_smoothies">NutritionSmoothies</string>
    <string name="exercises">Exercises</string>
    <string name="view_exercises_programme">Exercise Programme</string>
    <string name="view_warmup">Warmup / Cooldown</string>
    <string name="view_standing_exercises">Standing Exercises</string>
    <string name="view_warning">Warning</string>
    <string name="title_activity_exercise_programme">ExerciseProgramme</string>
    <string name="warmup">Warmup / Cooldown</string>
    <string name="standing">Standing Exercises</string>
    <string name="exercise_warning">Is there any time I should not exercise?</string>
    <string name="admin">Admin</string>
    <string name="password_reset_text">Please enter your username.</string>
    <string name="Email">E-mail Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_pass"><u>Forgot Your Password?</u></string>
    <string name="create_user">Create User</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="admin_user">Admin User</string>
    <string name="welcome_to_the_admin_page">Welcome to the Admin page!</string>
    <string name="temp">Loading…</string>
    <string name="diagram">Diagram of Exercise</string>
    <string name="clipart">ClipArt of Nutritional Information</string>
    <string name="Nutrition_Information">Nutrition Information</string>
    <string name="exercise_programme">Exercise Programme</string>
    <string name="meals">Meal Ideas</string>
    <string name="smoothies">Smoothie Recipes</string>
    <string name="admin_page">Admin Page</string>
    <string name="physio">Physiotherapist</string>
    <string name="client_name">Please enter client name</string>
    <string name="physio_page">Physiotherapist Page</string>
    <string name="Physio">Physio</string>
    <string name="create_client">Create Client</string>
    <string name="exercise_details_text">Enter Exercise Details here</string>
    <string name="exercise_details_text_proper">Enter Exercise Details Here</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_id">Exercise ID</string>
    <string name="repititions">Repititions</string>
    <string name="difficulty">Difficulty</string>
    <string name="blank" />
    <string name="_1_10">1-10</string>
    <string name="enter">Enter</string>
    <string name="track">Track</string>
    <string name="Physio_Label">Please select a client from the list below to view their exercises for today.</string>
    <string name="view_daily_exercises">View Daily Exercises</string>
    <string name="search">Search</string>
</resources>
