<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".CreateUser">

    <EditText
        android:id="@+id/etNewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/e_mail_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewEmail"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.06"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnConfirmCreate"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_button_admin"
        android:text="@string/create_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordConfirm" />

    <CheckBox
        android:id="@+id/cbAdmin"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:textColor="@color/colorWhite"
        android:text="@string/admin_user"
        app:layout_constraintStart_toStartOf="@+id/etPasswordConfirm"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordConfirm" />
</android.support.constraint.ConstraintLayout>