<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".CreatePhysio">

    <EditText
        android:id="@+id/etNewClientEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/e_mail_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etClientPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewClientEmail"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etClientPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/please_confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etClientPassword"
        app:layout_constraintVertical_bias="0.06"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/etClientName"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/client_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etClientPasswordConfirm"
        app:layout_constraintVertical_bias="0.035"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnConfirmClientCreate"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_button_admin"
        android:text="@string/create_client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etClientPasswordConfirm" />

</android.support.constraint.ConstraintLayout>