<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Admin">

    <TextView
        android:id="@+id/tvPhysio"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="64dp"
        android:gravity="start"
        android:text="@string/physio_page"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateClient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCreateClient"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="418dp"
        android:background="@drawable/rounded_button"
        android:text="@string/create_client"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhysio" />

    <Button
        android:id="@+id/btnClientTracker"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/view_daily_exercises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateClient" />
</android.support.constraint.ConstraintLayout>